# rubiks

./: CMakeLists.txt  README.md  cube.cpp  cube.h  main.cpp
app/: CMakeLists.clean.txt  CMakeLists.txt  main.cpp
backend/: CMakeLists.txt  do_run.sh  main.cpp  rubiks.config  run.sh
backend/data/: convert_model.py  make_pool.py  readme.txt
backend/network/: echo.cpp  echo.h  http_request.cpp  http_request.h  server.cpp  server.h  session.cpp  session.h  session_http.cpp  session_http.h  session_https.cpp  session_https.h  worker_pool.cpp  worker_pool.h
backend/rubiks/: rubiks.cpp  rubiks.h
backend/util/: base64.cpp  base64.h  datetime.cpp  datetime.h  json.cpp  json.h  md5.cpp  md5.h  random_util.cpp  random_util.h  synchronizable.h  url.cpp  url.h  utf.cpp  utf.h
conf/apache/: rubiks.io.conf  rubiks.love.conf
frontend/: manage.py
frontend/rubiks/: settings.py  urls.py  views.py  wsgi.py
frontend/rubiks/static/: rubiks.css
frontend/rubiks/templates/: authors.html  bootstrap_scripts.html  contact.html  debug.html  footer.html  general.html  head.html  header.html  learntest.html  main.html  model.backup.0  model.backup.1  model.html  nature.html  poetry.html  react_scripts.html  scripts.html  video.html
lib/: CMakeLists.txt  bfs2.h  cube.cpp  cube.h  kociemba.cpp  kociemba.h  kociemba_impl.cpp  kociemba_impl.h
misc/: rubiks.py  rubiks2.py
